--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "oauth-signature": "^1.5.0",
     "prop-types": "^15.7.2",
     "react-google-recaptcha": "^2.1.0",
-    "react-hook-form": "^7.34.2",
+    "react-hook-form": "7.43.9",
     "react-html-parser": "^2.0.2",
     "react-phone-number-input": "^3.2.7",
     "sanitize-html": "^2.2.0"
